<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu1"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_menu2"
            android:icon="@drawable/ride"
            android:title="@string/my_rides" />
        <item
            android:id="@+id/nav_menu3"
            android:icon="@drawable/history"
            android:title="@string/rides_history" />
        <item
            android:id="@+id/nav_menu4"
            android:icon="@drawable/profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_menu6"
            android:icon="@drawable/ride"
            android:title="@string/all_rides" />
        <item
            android:id="@+id/nav_menu7"
            android:icon="@drawable/ride_request"
            android:title="@string/my_ride_requests" />
        <item
            android:id="@+id/nav_menu5"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>


</menu>
