<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/dialogopen"
    android:background="#fff"
    android:padding="5dp"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/app_name"
        android:layout_margin="2dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLines="2"
        android:textSize="13sp"
        android:textColor="#000"
        android:text="@string/enter_seat" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">



            <EditText
                android:id="@+id/seats"
                android:layout_margin="5dp"
                android:background="@drawable/dark_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_seat_no"
                android:padding="5dp"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:gravity="center"/>



        </LinearLayout>



    <Button
        android:id="@+id/btn"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/request_ride"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/button_background"/>




</LinearLayout>